k3s/laravel-ecomerce/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laravel-ecomerce
  labels:
    app.kubernetes.io/name: laravel-ecomerce
    app.kubernetes.io/component: web
