k3s/laravel-ecomerce/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ecomerce
  namespace: laravel-ecomerce
  labels:
    app.kubernetes.io/name: laravel-ecomerce
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: laravel-ecomerce.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-ecomerce
                port:
                  name: http
